<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SeriesBrain</string>
    <string name="create_series">Create Series</string>
    <string name="delete_series">Delete Series</string>
    <string name="export_series">Export Series</string>
    <string name="import_series">Import Series</string>
    <string name="import_dialog_message">Tap OK to continue with the import. Existing series will not be changed</string>
    <string name="import_dialog_title">Import</string>
    <string name="import_dialog_positive">Import</string>
    <string name="import_dialog_negative">Cancel</string>
    <string name="toast_import_ok">Import completed</string>
    <string name="toast_import_cancelled">Import cancelled</string>
    <string name="toast_import_failed">Import failed</string>
    <string name="toast_export_done">Export completed</string>
    <string name="toast_export_failed">Export failed</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="series_name">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="plus_one">+1</string>
    <string name="minus_one">-1</string>
    <string name="ep_title">Ep.</string>
    <string name="se_title">Se.</string>
</resources>
